# polars-plugins-tutorial

./: .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  Makefile  README.md  check_polars_version.py  index.html  mkdocs.yml  perf.py  perf_list.py  pyproject.toml  requirements.txt  run.py  test_plugin.py
.github/workflows/: check_remote_polars_version.yml  ci.yml  pytest.yml
abs/: index.html
aggregate/: index.html
arguments/: index.html
arrays/: index.html
branch_mispredictions/: index.html
cum_sum/: index.html
docs/: abs.md  add_i64.md  aggregate.md  arguments.md  arrays.md  bob_the_list_builder.md  branch_mispredictions.md  cum_sum.md  geocode.md  index.md  life_pt1.md  life_pt2.md  lists.md  lists_in_lists_out.md  lost_in_space.md  noop.md  prerequisites.md  publishing.md  stem.md  stringify.md  struct.md  sum.md  vec_of_option.md  where_to_go.md
life_pt1/: index.html
life_pt2/: index.html
lists/: index.html
lists_in_lists_out/: index.html
lost_in_space/: index.html
minimal_plugin/: __init__.py  typing.py  utils.py
noop/: index.html
prerequisites/: index.html
publishing/: index.html
search/: search_index.json
src/: add.rs  arrays.rs  cum_sum.rs  expressions.rs  lib.rs  noop.rs  utils.rs
stem/: index.html
stringify/: index.html
struct/: index.html
sum/: index.html
vec_of_option/: index.html
where_to_go/: index.html
