[package]
# Name of the project goes here
# Note - it should be the same as the folder which you store your code in!
name = "minimal_plugin"
version = "0.1.0"
edition = "2021"

[lib]
# Name of the project goes here
# Note - it should be the same as the folder which you store your code in!
name = "minimal_plugin"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.16.0", features = ["derive", "dtype-struct", "dtype-decimal"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.42.0", default-features = false }
polars-arrow = { version = "0.42.0", default-features = false }
polars-core = { version = "0.42.0", default-features = false }
polars-sql = { version = "0.42.0", default-features = false }
reverse_geocoder = "4.1.1"
# rust-stemmers = "1.2.0"

[patch.crates-io]
pyo3-polars = { git = 'https://github.com/MarcoGorelli/pyo3-polars.git' }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
