[package]
# Name of the project goes here
# Note - it should be the same as the folder which you store your code in!
name = "minimal_plugin"
version = "0.1.0"
edition = "2021"

[lib]
# Name of the project goes here
# Note - it should be the same as the folder which you store your code in!
name = "minimal_plugin"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.19", features = ["derive", "dtype-struct", "dtype-decimal", "dtype-array"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.45", features = ["dtype-struct"], default-features = false }
polars-arrow = { version = "0.45", default-features = false }
polars-core = { version = "0.45", features = ["dtype-array"], default-features = false }
polars-sql = { version = "0.45", default-features = false }
reverse_geocoder = "4.1.1"
# rust-stemmers = "1.2.0"

